feat: complete JDK8/Node18 compatibility migration and startup script alignment